fixing iphone layout issues

--- a/css/main.less
+++ b/css/main.less
@@ -6,18 +6,38 @@ html {
 }
 
 body {
-  margin: 0;
-  width: 100%;
-  min-width: 1100px;
   font-family: "helvetica neue",helvetica,arial,sans-serif;
   color: #fefefe;
 }
 
-
 header {
-  min-width: 1100px;
   background-color: #EF0E88;
-  padding: 5em 5em 4em;
+  padding: 5em 80px 4em;
+  min-width: 950px;
+
+  h1 {
+    .twisted;
+    width: 750px;
+    font-size: 100px;
+    margin: 0;
+    margin-bottom: 0.2em;
+    color: #fff;
+    text-shadow: 0px 0px 2px #686868,
+                 0px 1px 1px #ddd,
+                 0px 2px 1px #d6d6d6,
+                 0px 3px 1px #ccc,
+                 0px 4px 1px #c5c5c5,
+                 0px 5px 1px #c1c1c1,
+                 0px 6px 1px #bbb,
+                 0px 7px 1px #777,
+                 0px 8px 3px rgba(100, 100, 100, 0.4),
+                 0px 9px 5px rgba(100, 100, 100, 0.1),
+                 0px 10px 7px rgba(100, 100, 100, 0.15),
+                 0px 11px 9px rgba(100, 100, 100, 0.2),
+                 0px 12px 11px rgba(100, 100, 100, 0.25),
+                 0px 13px 15px rgba(100, 100, 100, 0.3),
+                 0px 14px 16px rgba(0, 0, 0, 1);
+  }
 
   p {
     .large;
@@ -36,21 +56,23 @@ header {
 }
 
 #projects{
-  min-width: 1100px;
-  padding: 4em 0 6em 6em ;
+  padding: 4em 100px 6em;
   background-color: #2F2E33;
+  min-width: 910px;
+
   p {
     .large;
-    max-width: 950px;
+    width: 910px;
   }
 }
 
 footer {
-  min-width: 1100px;
   background-color: #000;
-  padding: 2em 6em 2em;
+  padding: 2em 100px 2em;
+  min-width: 910px;
 
   small {
+    width: 910px;
     font-size: 0.1em;
   }
 }
@@ -60,36 +82,13 @@ h1 {
   font-size: 4.5em;
 }
 
-h1.logo  {
-  .twisted;
-  width: 750px;
-  font-size: 100px;
-  margin: 0;
-  margin-bottom: 0.2em;
-  color: #fff;
-  text-shadow: 0px 0px 2px #686868,
-               0px 1px 1px #ddd,
-               0px 2px 1px #d6d6d6,
-               0px 3px 1px #ccc,
-               0px 4px 1px #c5c5c5,
-               0px 5px 1px #c1c1c1,
-               0px 6px 1px #bbb,
-               0px 7px 1px #777,
-               0px 8px 3px rgba(100, 100, 100, 0.4),
-               0px 9px 5px rgba(100, 100, 100, 0.1),
-               0px 10px 7px rgba(100, 100, 100, 0.15),
-               0px 11px 9px rgba(100, 100, 100, 0.2),
-               0px 12px 11px rgba(100, 100, 100, 0.25),
-               0px 13px 15px rgba(100, 100, 100, 0.3),
-               0px 14px 16px rgba(0, 0, 0, 1);
-}
 
 .twisted {
   -webkit-transform: rotate(-10deg);
-  -moz-transform: rotate(-5deg);
-  -ms-transform: rotate(-20deg);
-  -o-transform: rotate(-20deg);
-  transform: rotate(-20deg);
+  -moz-transform: rotate(-10deg);
+  -ms-transform: rotate(-10deg);
+  -o-transform: rotate(-10deg);
+  transform: rotate(-10deg);
 }
 
 
